--- a/requirements.txt
+++ b/requirements.txt
@@ -5,66 +5,4 @@ langchain-google-genai
 chromadb
 streamlit
 pdfplumber
-
-print("✅ requirements.txt dosyası hatasız olarak oluşturuldu.")
-
-
-# 2.2 Vektör Veritabanı Kurulumu ve Gelişmiş Analitik RAG Testi
-# Bu blok, projenin Veri Seti (sistem.pdf) kriterini karşıladığını kanıtlar.
-import os
-from langchain_google_genai import ChatGoogleGenerativeAI, GoogleGenerativeAIEmbeddings
-from langchain.chains import RetrievalQA
-from langchain.prompts import PromptTemplate
-from langchain_community.vectorstores import Chroma
-from langchain.docstore.document import Document
-from langchain.text_splitter import RecursiveCharacterTextSplitter
-from langchain.retrievers import MultiQueryRetriever
-import pdfplumber 
-
-print("\n--- ADIM 2: ANALİTİK RAG TESTİ ---")
-PDF_DOSYA_ADI = "sistem.pdf"
-file_path = PDF_DOSYA_ADI
-
-if not os.path.exists(file_path):
-    print(f"❌ HATA: '{file_path}' dosyası bulunamadı. Lütfen Colab'a yükleyin.")
-    sys.exit(1)
-
-try:
-    # Veri İşleme
-    full_text = "";
-    with pdfplumber.open(file_path) as pdf:
-        for page in pdf.pages: full_text += page.extract_text() + "\n\n"
-    documents = [Document(page_content=full_text, metadata={"source": file_path})]
-    text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, overlap=200, separators=["\n\n", "\n", " ", ""],)
-    texts = text_splitter.split_documents(documents)
-    
-    # Vektör Veritabanı Kurulumu
-    embedding_model = GoogleGenerativeAIEmbeddings(model="text-embedding-004")
-    vectorstore = Chroma.from_documents(documents=texts, embedding=embedding_model)
-    print(f"✅ Vektör veritabanı kuruldu. {len(texts)} parça oluşturuldu.")
-
-    # RAG Zinciri Kurulumu ve Analitik Prompt
-    llm = ChatGoogleGenerativeAI(model="gemini-2.5-flash", temperature=0.2)
-    base_retriever = vectorstore.as_retriever(search_kwargs={"k": 12})
-    retriever = MultiQueryRetriever.from_llm(retriever=base_retriever, llm=llm)
-
-    prompt_template = """Sen bir GÜNEŞ SİSTEMİ VE JEOFIZIK UZMANISIN. Görevin, sana verilen BAĞLAM'daki bilgileri ANALİZ EDEREK bir cevap SENTEZLEMEKTİR. Neden-sonuç ilişkileri kur, kıyaslamalar yap ve mantıksal çıkarımlar sun.
-
-    Eğer cevap KESİNLİKLE BAĞLAM'da yoksa, sadece "Bu konuda elimde yeterli bilgi yok." diye cevap ver.
-    BAĞLAM: {context}
-    Soru: {question}
-    Cevap:"""
-    PROMPT = PromptTemplate(template=prompt_template, input_variables=["context", "question"])
-    qa_chain = RetrievalQA.from_chain_type(llm=llm, chain_type="stuff", retriever=retriever, chain_type_kwargs={"prompt": PROMPT})
-    
-    # Analitik Test
-    test_sorusu = "Güneş sistemindeki gezegenlerin büyükten küçüğe sıralamasını vererek, Dünya ve Jüpiter'in iç yapılarını ve uydu sayılarını kıyasla."
-    cevap = qa_chain.invoke(test_sorusu)
-
-    print("\n--- ANALİTİK RAG TEST SONUCU (NEDEN-SONUÇ) ---")
-    print(f"Cevap: {cevap['result'][:600]}...")
-    print("-----------------------------------------")
-
-except Exception as e:
-    print(f"❌ KRİTİK HATA: RAG zinciri kurma veya çalıştırma hatası: {e}")
-    sys.exit(1)
+Eylem: Bu temiz listey
